finding the location of the file

--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
-CORBOS_URL = ""
+CORBOS_URL = 'http://localhost/corebos/webservice.php'
 CORBOS_TOKEN = ""
 UPLOADED_FILE_LOCATION = ""
 CORBOS_STORAGE_URL = ""
 STREAM_NAME ="mystream"
 SUBJECT = "subject"
-NATS_HOST = ""
-NATS_PORT = ""
-
+NATS_HOST = "localhost"
+NATS_PORT = 4222
 NATS_USER = ""
 NATS_PASSWORD = ""
+NATS_USER = ""
+NATS_PASSWORD = ""
+
+
+HOURS_AMOUNT ="48"
+
