get callenge and long in corbose

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 CORBOS_URL = 'http://localhost/corebos/webservice.php'
 CORBOS_TOKEN = ""
+CORBOS_ACCESS_KEY = ""
+
+
 UPLOADED_FILE_LOCATION = ""
 CORBOS_STORAGE_URL = ""
 STREAM_NAME ="mystream"
